ISPN-7659 Add java.xml.bind module and open some java.base packages